# OnlyAlpha

./: .editorconfig  .gitattributes  .gitignore  .gitignore copy  .pre-commit-config.yaml  AGENTS.md  HANDOFF.md  NEXT.md  README.md  pyproject.toml
.github/workflows/: ci.yml  cross-platform-tests.yml  python-publish.yml
docs/: a_share_market_profile.md  account.md  account_broker_component_analysis.md  architecture.md  architecture_principles.md  backtest.md  bar_subscription.md  broker_gateway.md  broker_plugin.md  cli.md  clock.md  clock_acceptance_report.md  clock_analysis.md  cluster.md  cluster_configuration.md  cluster_lifecycle.md  coding_style.md  concurrency.md  data_source_plugin.md  domain_analysis.md  domain_conformance_gap.md  domain_model.md  engine.md  event.md  event_component_acceptance_report.md  event_component_analysis.md  execution_position_scope.md  execution_processor.md  execution_processor_component_analysis.md  factor.md  factor_pipeline.md  gateway.md  historical_data_source.md  historical_replay.md  indicator.md  indicator_registry.md  instrument_model.md  integration_vertical_slice.md  margin_model.md  market_capability_coverage.md  (+65 more)
docs/adr/: 0000-template.md  0001-engine-runtime-cluster.md  0002-instrument-value-types.md  0003-cache-storage-separation.md  0004-event-and-concurrency.md  0005-pure-financial-domain.md  0006-domain-market-rules-and-data-semantics.md  0007-utc-time-and-market-calendar.md  0008-clock-and-timer-model.md  0009-event-and-primary-bar-delivery.md  0010-runtime-context-and-cluster-lifecycle.md  0011-order-component-and-execution-port.md  0012-risk-pipeline-profile-and-reservation.md  0013-position-allocation-settlement-and-reconciliation.md  0014-strategy-ledger-capital-pnl-and-equity.md  0015-account-broker-ports-and-virtual-broker.md  0016-execution-processor-ordered-trade-application.md  0016-historical-bar-parquet-cache.md  0017-market-data-sources-and-deterministic-replay.md  0018-product-style-demo-and-synthetic-backtest.md  0019-runtime-agnostic-config-factory-and-output.md  0020-cluster-strategy-factor-indicator-model.md  0021-engine-cluster-cli-and-user-data-layout.md  (+11 more)
examples/: README.md  __init__.py  committed_execution_report.py  run.py
plugins/onlyalpha_examples/: README.md  pyproject.toml
plugins/onlyalpha_examples/src/onlyalpha_examples/: __init__.py
plugins/onlyalpha_examples/src/onlyalpha_examples/factors/: __init__.py
plugins/onlyalpha_examples/src/onlyalpha_examples/factors/macd_signal/: __init__.py  factor.py  snapshot.py
plugins/onlyalpha_examples/src/onlyalpha_examples/strategies/: __init__.py
plugins/onlyalpha_examples/src/onlyalpha_examples/strategies/macd/: __init__.py  config.py  result.py  strategy.py
prompts/: AppliedTradeJournalRebuildCommittedExecutionJournal.md  FuturesClosureFullScenarioExamplesandArchitectureDocumentation.md  Market_Profiles_and_Multi-Market_Conformance_Suite.md  Market_Simulation_Framework.md  Multi-ClusterPerformance.md  Multi-Market_Conformance_Packs_and_Product_Integration.md  Multi-Market_Scenario_Framework.md  OnlyAlphaMonorepoCI_Python_ReleaseAndDocumentationConsolidation.md  OnlyAlphaPosition-Side-AwareExecutionAuditAndReconciliation.md  OnlyAlphaUnifiedFeeAuthority.md  OnlyAlphaUnifiedFeeMigrationRecovery.md  VirtualBrokerPlugin.md  account_and_virtual_broker_component_implementation.md  backtest_dynamic_strategy_configuration_refactor.md  backtest_result_summary.md  cache_history_bar_data.md  cleanup_phase_0.md  cleanup_rebuild_api.md  clock_implementation.md  cluster_strategy_factor_indicator_architecture_refactor.md  domain_conformance.md  engine_cluster_cli_userdata_refactor.md  event_component_implementation.md  execution_processor_component_implementation.md  market_data_source_component_implementation.md  order_component_implementation.md  position_component_implementation.md  rebuild_OnlyRunConfig_OnlyEngineRunService.md  rebuild_plugins_sip.md  rebuild_unified_market_runtime.md  results_framework.md  risk_component_implementation.md  runtime_context_implementation.md  strategy_ledger_component_implementation.md  synthetic_macd_backtest_product_demo.md  time_model_refactor.md  tushare_plugins_data_source.md  xtquant_onlyalpha_plugin.md
scripts/: check_python_version.py  pre_commit_quality.py  run_component_validation.sh  version_sync.py
tests/: __init__.py  runtime_runner.py
tests/fixtures/external_plugins/onlyalpha_test_plugin/: pyproject.toml
tests/fixtures/external_plugins/onlyalpha_test_plugin/src/onlyalpha_test_plugin/: __init__.py  broker.py  data_source.py  macd_plugin.py
(+812 files in other folders)
