[project]
name = "onlyalpha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "pre-commit>=4.6.0",
    "pyarrow>=24.0.0",
    "pytest>=9.1.1",
    "rich>=15.0.0",
    "schedule>=1.2.2",
    "tomli>=2.4.1",
    "xtquant>=250516.1.1",
]

[tool.ruff]
line-length = 120
target-version = "py312"
indent-width = 4

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
