[project]
name = "onlyalpha"
version = "0.1.0"
description = "A modular, deterministic quantitative trading system skeleton"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "pre-commit>=4.6.0",
    "pyarrow>=21.0.0",
    "pyyaml>=6.0.2",
]

[project.scripts]
onlyalpha = "onlyalpha.cli:main"

[dependency-groups]
dev = ["mypy>=1.15", "pytest>=8.4", "ruff>=0.11"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/onlyalpha"]

[tool.ruff]
line-length = 120
target-version = "py312"
indent-width = 4

[tool.ruff.lint]
extend-select = ["I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/onlyalpha"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
