[project]
name = "onlyalpha"
version = "0.2.8"
description = "A modular, deterministic quantitative trading system skeleton"
readme = "README.md"
requires-python = ">=3.12.0, <3.13.0"
dependencies = [
    "pyarrow>=21.0.0",
    "pyyaml>=6.0.2",
    "tzdata>=2025.2; sys_platform == 'win32'",
]

[dependency-groups]
dev = [
    "build>=1.2",
    "mypy>=1.15",
    "packaging>=25",
    "pre-commit>=4.6",
    "pytest>=8.4",
    "pytest-cov>=6",
    "ruff>=0.11",
    "tomlkit>=0.13",
    "twine>=6",
    "onlyalpha-test-plugin",
]

[project.scripts]
onlyalpha = "onlyalpha.cli:main"

[tool.uv.workspace]
members = [
    "packages/fake/onlyalpha-plugin-broker-virtual",
    "packages/provider/onlyalpha-plugin-tushare",
    "packages/provider/onlyalpha-plugin-miniqmt",
]

[build-system]
requires = ["hatchling>=1.26,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/onlyalpha"]

[tool.ruff]
line-length = 120
target-version = "py312"
indent-width = 4

[tool.ruff.lint]
extend-select = ["I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/onlyalpha"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.uv.sources]
onlyalpha-test-plugin = { path = "tests/fixtures/external_plugins/onlyalpha_test_plugin", editable = true }

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "packages/provider/onlyalpha-plugin-tushare/tests",
    "packages/provider/onlyalpha-plugin-miniqmt/tests",
]
markers = [
    "unit: isolated unit test",
    "contract: public API or plugin contract test",
    "integration: local integration test",
    "scenario: Engine scenario test",
    "conformance: market conformance test",
    "external: external service integration test",
    "requires_network: requires network access",
    "requires_tushare: requires Tushare token",
    "requires_local_qmt: requires local MiniQMT client",
    "windows: Windows-only test",
    "slow: slow test",
]
