[project]
name = "onlyalpha-examples"
version = "0.1.0"
description = "Example Strategy and Factor plugins for OnlyAlpha"
requires-python = ">=3.12"
dependencies = ["onlyalpha"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/onlyalpha_examples"]
