[project]
name = "onlyalpha-test-plugin"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = ["onlyalpha==0.2.6"]

[project.entry-points."onlyalpha.data_sources"]
test-external-data = "onlyalpha_test_plugin.data_source:factory"

[project.entry-points."onlyalpha.brokers"]
test-external-broker = "onlyalpha_test_plugin.broker:factory"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/onlyalpha_test_plugin"]
